jaeger/helm/gateway.yml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: observability-gateway
  namespace: observability
spec:
  gatewayClassName: cilium
  listeners:
    # 1. 自动重定向 80 到 443 (可选，这里为了简洁直接配置 443)
    - name: https
      protocol: HTTPS
      port: 443
      hostname: "jaeger-ui.app.com"
      tls:
        mode: Terminate # 在网关层卸载 TLS
        certificateRefs:
          - name: observability-gateway-tls-secret
      allowedRoutes:
        namespaces:
          from: Same
