jaeger/helm/grpc-route.yml
apiVersion: gateway.networking.k8s.io/v1
kind: GRPCRoute
metadata:
  name: jaeger-grpc-route
  namespace: observability
spec:
  parentRefs:
    - name: observability-gateway
      sectionName: tls # 对应 Gateway 的监听器名称
      namespace: default
  hostnames:
    - "jaeger-grpc.app.com"
  rules:
    - backendRefs:
        - name: jaeger
          port: 4317
