jaeger/helm/ui-route.yml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: jaeger-ui-route
  namespace: observability
spec:
  parentRefs:
    - name: observability-gateway
      sectionName: https # 对应 Gateway 的监听器名称
  hostnames:
    - "jaeger.sumery.com"
  rules:
    - backendRefs:
        - name: jaeger
          port: 16686
